Option to Display Data Disabled Indicator Icon [2/2] [No switch]
Change-Id: I0111bd3967d522f6d2cd60ed901d3ae85ce588c8
Signed-off-by: RakeshBatra <raakesh.batra@rediffmail.com>

--- a/res/values/dot_strings.xml
+++ b/res/values/dot_strings.xml
@@ -140,4 +140,8 @@
     <string name="unlock_quick_unlock_control_title">Quick unlock</string>
     <string name="unlock_quick_unlock_control_summary">Unlock automatically when the correct PIN is entered\nNote: will only work for 4 digit PIN !</string>
 
+        <!-- Data disabled icon -->
+    <string name="data_disabled_icon_title">Show data disabled icon</string>
+    <string name="data_disabled_icon_summary">Display the cross sign next to signal bar when data is disabled</string>
+
 </resources>
